figue/tests/integration/snapshots/main__integration__ariadne__ariadne_unknown_flag_with_suggestion.snap
---
source: crates/figue/tests/integration/ariadne.rs
expression: ariadne_output
---
Error: unknown flag: --c0ncurrency. Did you mean '--concurrency'?
   ╭─[ <cli>:1:1 ]
   │
 1 │ --c0ncurrency 4
   │ ──────┬──────  
   │       ╰──────── unknown flag: --c0ncurrency. Did you mean '--concurrency'?
───╯
Error: unexpected argument: 4
   ╭─[ <cli>:1:15 ]
   │
 1 │ --c0ncurrency 4
   │               ┬  
   │               ╰── unexpected argument: 4
───╯
